# rustgrad

./: Cargo.toml
src/: lib.rs
src/autograd/: context.rs  engine.rs  graph.rs  mod.rs  node.rs  store.rs
src/backend/: cpu.rs  mod.rs  traits.rs
src/nn/: mod.rs
src/ops/: attention.rs  binary.rs  embedding.rs  matmul.rs  mod.rs  norm.rs  reduction.rs  shape.rs  unary.rs
src/optim/: mod.rs
src/tensor/: layout.rs  mod.rs  storage.rs  tensor.rs
tests/: grad_check.rs
